--- a/src/pages/Login/Login.styles.css
+++ b/src/pages/Login/Login.styles.css
@@ -4,11 +4,19 @@
   display: flex;
 }
 
+.login__title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 50px;
+  opacity: 0.7;
+  border-bottom: 1px solid #444;
+  text-align: center;
+}
+
 .form__container {
-  width: 30%;
+  width: 50%;
   margin: 0 auto;
-  margin-top: 150px;
-  padding: 100px 50px;
+  padding: 50px 50px 100px 50px;
   background-color: #cecece;
   border-radius: 10px;
   -webkit-box-shadow: 10px 10px 20px 1px rgba(0, 0, 0, 0.75);
@@ -53,4 +61,27 @@
 .form__button button:hover {
   color: #ffffff;
   background-color: #4bb7ff;
+}
+
+.password__icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  cursor: pointer;
+  margin-top: 50px;
+}
+
+.form__input__icons .password__icon {
+  position: absolute;
+  right: 37%;
+}
+
+.form__input__icons {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.form__input__field {
+  width: 100%;
+  padding: 10px;
 }
