Add media queries

--- a/src/pages/Posts/Posts.styles.css
+++ b/src/pages/Posts/Posts.styles.css
@@ -72,3 +72,9 @@
   margin-bottom: 0.5rem;
   border-bottom: 1px solid #cccccc;
 }
+
+@media screen and (max-width: 768px) {
+  .post__container {
+    width: 100%;
+  }
+}
